@startuml


hide attributes



class Pin {
    +init(id, mode, pull, af)
    +high()
    +low()
    +on()
    +off()
    +toggle()
    +value()
    +value(val)
}

interface Ihm {
    {abstract} add_element(name, element)
    {abstract} refresh_elements()
}

class IhmBasic {
    +add_element(name, element)
    +refresh_elements()
}

abstract IhmElement {
    {abstract} refresh()
}

class IhmEltPin {
    +refresh()
    +update(notification)
}


Interface Subject {
    {abstract} register_observer(observer)
    {abstract} remove_observer(observer)
    {abstract} notify_observer()
}
class Notification
Interface Observer {    
    {abstract} update(notification)
}

Ihm <|.. IhmBasic
class Io {
    +register_observer(observer)
    +remove_observer(observer)
    +notify_observer()
}

class Context {
    +add_io_ihm_interface(io_class, ihmelt_class)    
    +attach_ihm(ihm)
    +register_io(io)
}

abstract Singleton

Io <|-- Pin
Subject <|.. Io

Observer <|.. IhmElement
IhmElement <|-- IhmEltPin

Singleton <|-- Context

Context " n " o-left-> " 0,1 " Ihm
Context " 1 " o--> " n " Io
Subject .up.> Notification

IhmBasic " 1 " o--> " n " IhmElement

IhmEltPin " n " *-right-> " 1 " Pin



@enduml